@@ -14,6 +14,9 @@ NEXT
 ----
 • The "content"  method no longer  fails when  "dom_enabled" has been
   unset [rt.cpan.org #84639].
+• The "content"  method  now returns  the  correct content  when  the
+  request chain  contains  both  server-  and  client-side  redirects
+  [rt.cpan.org #84472].
 
 0.029
 -----
